[package]
name        = "rit-tui"
version     = "0.1.3"
edition     = "2024"
authors     = ["DrShahinstein <1taylanozturk@protonmail.com>"]
description = "A tiny git manager I made for myself"
repository  = "https://github.com/DrShahinstein/rit"
readme      = "README.md"
license     = "WTFPL"
keywords    = ["git", "tui", "terminal"]
categories  = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre   = "0.6.5"
crossterm    = "0.29.0"
ratatui      = "0.29.0"
tui-textarea = { version="0.7.0", features=["crossterm"] }
